<?xml version="1.0"?>
<package format="2">
  <name>cairo_nlp</name>
  <version>0.0.0</version>
  <description>The NLP package for CAIRO lab.</description>

  <maintainer email="carl.mueller@colorado.edu">Carl Mueller</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
